crates/aven-check/tests/fixtures/check/invalid/pattern-binding-uppercase.av
{ Text } = { Text: 1 }
Text
